[package]
name = "quicssh-rs"
version = "0.1.6"
edition = "2021"
license = "MIT"
authors = [
    "aruz (fork maintainer)",
    "hkatsuma <h.katsumata.2026@gmail.com> (upstream fork maintainer)",
    "oowl <ouyangjun1999@gmail.com> (original author)"
]
description = "QUIC proxy for SSH with stabilized network compatibility. WARNING: By default, QUIC certificate verification is disabled for ease of use; use at your own risk or enable verification with proper certificates."
repository = "https://github.com/aruz/quicssh-rs"
homepage = "https://github.com/aruz/quicssh-rs"

[[bin]]
name = "quicssh-rs"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
quinn = "0.11.9"
tokio = { version = "1.52.1", features = ["full"] }
url = "2.5.8"
rustls = { version = "0.21.12", features = ["quic","dangerous_configuration"] }
rustls-pemfile = "2.2.0"
rcgen = "0.12.1"
log = { version = "0.4.29", features = ["std", "serde"] }
log4rs = "1.4.0"
serde = "1.0.228"
toml = "0.8.19"
